[package]
name = "rldd-rex"
version = "1.0.1"
edition = "2024"
description = "Minimalistic recursive ELF dependency resolver for Linux, BSDs, and Solaris."
authors = ["mxnt <m10ferrari1200@gmail.com>"]
license = "MIT"
repository = "https://github.com/LinuxDicasPro/rldd-rex"
readme = "README.md"
keywords = ["elf", "ldd", "rldd", "rust", "linux"]
categories = ["development-tools"]

[dependencies]
goblin = "0.10"
memmap2 = "0.9"
glob = "0.3"

[features]
default = []
enable_ld_library_path = []

[dev-dependencies]
rldd-rex = { path = ".", features = ["enable_ld_library_path"] }
